# lab_sample_pipelines

./: .gitignore  LICENSE  README.md
kfp/: .gitignore  DEPLOYMENT.md  README.md  deploy_all_component.sh  pipeline.py  pyproject.toml
kfp/components/data_generator/: Dockerfile  README.md  data_generator.yaml  pyproject.toml
kfp/components/data_generator/src/: artifact.py  data_generator.py  data_generator.yaml
kfp/components/data_generator/tests/: test_main.py
kfp/components/evaluator/: Dockerfile  README.md  evaluator.yaml  pyproject.toml  setup.cfg
kfp/components/evaluator/src/: artifact.py  evaluator.py  evaluator.yaml
kfp/components/evaluator/tests/: test_main.py
kfp/components/trainer/: Dockerfile  README.md  pyproject.toml  trainer.yaml
kfp/components/trainer/src/: artifact.py  trainer.py  trainer.yaml  transform.yaml
kfp/components/trainer/tests/: test_main.py
kfp/components/transform/: Dockerfile  README.md  pyproject.toml  transform.yaml
kfp/components/transform/src/: data_generator.py  transform.py  transform.yaml
kfp/components/transform/tests/: test_main.py
