[tool.poetry]
name = "sample_pipeline"
version = "0.0.0"
description = "KFP Sample Pipeline."
authors = ["Repro AI Lab Team <dev-lab@repro.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.8.0"
kfp = "^1.0"
pip = "^21.1.1"

[tool.poetry.dev-dependencies]
black = { version = "*", allow-prereleases = true }
flake8 = "*"
isort = "*"
mypy = "*"
pydocstyle = "*"
pytest = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"