[tool.poetry]
name = "sample_pipeline"
version = "0.0.2"
description = "KFP Sample Pipeline."
authors = ["Repro AI Lab Team <dev-lab@repro.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.9.0"
kfp = "^1.8"
pip = "*"
google-cloud-aiplatform = "^1.12.0"

[tool.poetry.dev-dependencies]
black = { version = "*", allow-prereleases = true }
flake8 = "*"
isort = "*"
mypy = "*"
pydocstyle = "*"
pytest = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"