[tool.poetry]
name = "data_generator"
version = "0.1.0"
description = "data-generator component of kfp sample pipeline"
authors = ["Repro AI Lab Team <dev-lab@repro.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.8.0"
pip = "^21.1.1"
gcsfs = "^2021.5.0"
google-cloud-bigquery = "^2.6.1"
google-cloud-storage = "^1.35.0"

[tool.poetry.dev-dependencies]
pydocstyle = "*"
bandit = "*"
prospector = "*"
mypy = "*"
pytest = "*"
black = { version = "*", allow-prereleases = true }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"