[tool.poetry]
name = "kfp_sample_data_generator"
version = "0.0.1"
description = "data-generator component of kfp sample pipeline"
authors = ["Repro AI Lab Team <dev-lab@repro.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.8.0"
pip = "^21.1.1"
numpy = "^1.20.3"
scikit-learn = "^0.24.2"

[tool.poetry.dev-dependencies]
pydocstyle = "*"
bandit = "*"
prospector = "*"
mypy = "*"
pytest = "*"
black = { version = "*", allow-prereleases = true }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"