[tool.poetry]
name = "kfp_sample_transform"
version = "0.0.1"
description = "transform component of kfp sample pipeline"
authors = ["Repro AI Lab Team <dev-lab@repro.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.9.0"
pip = "*"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]
pydocstyle = "*"
bandit = "*"
prospector = "*"
mypy = "*"
pytest = "*"
black = { version = "*", allow-prereleases = true }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"